<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droido - Mensagens SMS prontas</string>
    <string name="version_name">4.2</string>
    <string name="version_code">22</string>
    <string name="app_version">Versão: 4.2.22</string>
    <string name="footer_loading">Carregando...</string>
    <string name="row_options">Opções</string>
    <!-- ACTION BAR -->
    <string name="action_search">Buscar</string>
    <string name="action_search_hint">Pesquisar por mensagem</string>
    <string name="action_menu">Menu</string>

    <!-- MENU DE OPçÔES PRINCIPAL -->
    <string name="option_rate">Avaliar</string>
    <string name="option_ordenar">Ordenar</string>
    <string name="option_send">Envie a sua</string>
    <string name="option_more">Mais Aplicativois</string>

    <!-- MENU MENSAGEMS -->
    <string name="mensagem_avaliar">Avaliar</string>
    <string name="mensagem_compartilhar">Compartilhar</string>
    <string name="mensagem_editar">Editar</string>
    <string name="mensagem_favorito">Adicionar/Remover dos Favoritos</string>
    <string name="mensagem_enviado">Marcar/Desmarcar como enviada</string>

    <!-- Filtros -->
    <string name="ordem_aleatoria">Aleatória</string>
    <string name="ordem_melhores">Melhores primeiro</string>
    <string name="ordem_favoritos">Favoritos Primeiro</string>
    <string name="ordem_novas">Novas Primeiro</string>
    <string name="ordem_nao_enviadas">Não Enviadas Primeiro</string>
    <string name="ordem_enviadas">Enviadas Primeiro</string>

    <!-- Menu Inferior (Actionbar) -->
    <string name="menu_mais_apps">Mais Aplicativos</string>
    <string name="menu_avaliar">Avaliar</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="mensagem_copiar">Copiar</string>
    <string name="send_to">Enviar para...</string>
    <string name="success_clipboarded">Sua mensagem foi copiada para área de transferêcia caso queira cola-la em algum lugar :)</string>
    <string name="mensagem_btn_fav">Favoritar</string>
    <string name="novidades_titulo">O que há de novo?</string>
    <string name="novidades">
    * 50 novas mensagens com autoria de usuários que deram 5 estrelas no Google Play!\n\n
    * Corrigidos problemas com alguns aparelhos na atualização!\n\n
    * As mensagens são exibidas do início quando muda-se a categoria. \n\n
    * Agora você pode nos avisar quando uma mensagem está na categoria errada, com erros de português, achar ofensivo ou simplesmente não gostar! \n Use o menu individual para isso!\n\n
    * Pode nos informar que gostou de uma mensagem também, assim ela será melhor avaliada.\n\n
    * Pode adotar uma mensagem como autor.\n\n
    * Corrigindo mensagens em categorias erradas.\n\n
    </string>
    <string name="novidade_dismiss">Legal!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="message_author">Luiz Carvalho</string>
    <string name="title_activity_load_screen">LoadScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="update_mensagens">Carregando Mensagens...</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="mensagem_gostar">Gostei</string>
    <string name="mensagem_nao_gostar">Não gostei</string>
    <string name="mensagem_report">Reportar</string>
    <string name="report_title">O que você deseja reportar?</string>
    <string name="redrails_dev">RedRails Mobile</string>
    <string name="app_author">\@Luizcarvalho</string>
    <string name="report_response">Informaremos isto aos nossos desenvolvedores, que terão o prazer de gastar sábados, domingos e feriados melhorando o Droido pra você!</string>

</resources>
