<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mensagem_favorito"
        android:title="@string/mensagem_favorito"
        />

    <item
        android:id="@+id/mensagem_share"
        android:title="@string/mensagem_compartilhar"
        android:actionProviderClass="android.widget.ShareActionProvider"
        />
    <item
        android:id="@+id/mensagem_copiar"
        android:title="@string/mensagem_copiar"
        />

    <item
        android:id="@+id/mensagem_gostar"
        android:title="@string/mensagem_gostar"
        />


    <item
        android:id="@+id/mensagem_nao_gostar"
        android:title="@string/mensagem_nao_gostar"
        />
    <item
        android:id="@+id/mensagem_reportar"
        android:title="@string/mensagem_report"
        />

</menu>