<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu"
        android:title="@string/action_menu"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"
        app:showAsAction="ifRoom"
        />

<!-- menu inferiro -->
    <item
        android:id="@+id/menu_mais_apps"
        android:title="@string/menu_mais_apps"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_configuracoes"
        android:title="@string/menu_configuracoes"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_avaliar"
        android:title="@string/menu_avaliar"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sobre"
        android:title="@string/menu_sobre"
        app:showAsAction="never"
        />


</menu>