<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
   >

    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        />
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/biglogo"
        android:id="@+id/bigLogo"
        android:layout_above="@id/app_name"
        />
    <TextView
        android:id="@+id/app_version"
        android:layout_below="@+id/app_name"
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        />
    <TextView
        android:id="@+id/red_rails"
        android:text="@string/redrails_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/app_author"
        android:layout_below="@+id/red_rails"
        android:text="@string/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        />

</RelativeLayout>
